implementacion exportacion a PDF y conexion con BBDD